...
    android:paddingHorizontal="10dp"
    android:paddingTop="20dp"
    android:paddingBottom="30dp"
    tools:context=".GroupDetailsActivity">

    <TextView
        android:id="@+id/group_name_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Group name"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintBottom_toTopOf="@id/add_expense_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/group_name_text_view">

        <TableLayout
            android:id="@+id/members_table_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:stretchColumns="0"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow android:layout_marginVertical="2dp">

                <TextView
                    android:id="@+id/member_text_view_0"
                    android:padding="3dp"
                    android:text="member name"
                    android:textSize="26sp" />

                <TextView
                    android:id="@+id/member_debt_text_view_0"
...
